add class to html page,add README and styles to css page
co-authored-by: Ty Huard <thuard06@gmail.com>
co-authored-by: Ester Tataje <ester.tataje@gmail.com>

--- a/index.html
+++ b/index.html
@@ -5,9 +5,26 @@
   <title>Document</title>
   </head>
   <body>
+    <div class="container">
+      <h1>Doggies Dig It - Animal Shelter</h1>
+        <p>We love dogs! You should too!</p>
+        <p>Be a fur parent and adopt, don't shop!</p>
+      <h2>Meet your future fur children!</h2>
 
-    <h1>Doggies Dig It - Animal Shelter</h1>
-  
+    <div class="row">
+      <div class="=profile">
+        <p>MEET BERNICE AND MAIA! They love to wrestle and snuggle and are a package deal!</p>
+        <img src="img/bernie.jpg">
+      </div>
+      <div class="profile">
+        <p>MEET ARBOR!  She is a true lover and a shedder!</p>
+        <img src="img/arbor.jpg">
+      </div>
+      <div class="profile">
+        <p>MEET MOE! He is full of attitude and loves attention!  A true little shitttt-zu!</p>
+      </div>
+    </div>    
+    </div>  
   </body>
 </html>
 
