add styles, cascading effects, rows to elements
co-authored-by: Ty Huard <thuard06@gmail.com>
co-authored-by: Ester Tataje <ester.tataje@gmail.com>

--- a/index.html
+++ b/index.html
@@ -12,16 +12,20 @@
       <h2>Meet your future fur children!</h2>
 
     <div class="row">
-      <div class="=profile">
-        <p>MEET BERNICE AND MAIA! They love to wrestle and snuggle and are a package deal!</p>
+      <div class="profile">
+        <p>MEET BERNICE AND MAIA!</p> 
+        <p>They love to wrestle and snuggle and are a package deal!</p>
         <img src="img/bernie.jpg">
       </div>
       <div class="profile">
-        <p>MEET ARBOR!  She is a true lover and a shedder!</p>
+        <p>MEET ARBOR!</p>  
+        <p>She is a true lover and a shedder!</p>
         <img src="img/arbor.jpg">
       </div>
       <div class="profile">
-        <p>MEET MOE! He is full of attitude and loves attention!  A true little shitttt-zu!</p>
+        <p>MEET MOE!</p>
+        <p>He is full of attitude and loves attention!  A true little shitttt-zu!</p>
+        <img src="img/ MOE.jpg">
       </div>
     </div>    
     </div>  
